# TheRustyWebGPU

./: .gitignore  README.md
tutorial01_window/: shell.nix
tutorial05_textures/: Cargo.toml
tutorial06_uniform_buffers_and_3d/src/: shader.wgsl
tutorial07_instancing/src/: lib.rs
tutorial08_depth_buffer/: flake.nix
tutorial09_model_loading/: Cargo.toml
tutorial09_model_loading/src/: resources.rs
tutorial10_lighting/src/: camera.rs  lib.rs  model.rs
tutorial11_normal_mapping/src/: lib.rs  model.rs  resources.rs  shader.wgsl  texture.rs
tutorial12_better_camera/: Cargo.toml  shell.nix
tutorial12_better_camera/src/: camera.rs  lib.rs  shader.wgsl
tutorial1_window/: Cargo.toml  flake.nix
tutorial1_window/src/: lib.rs
tutorial2_surface/: Cargo.toml
tutorial2_surface/src/: lib.rs
tutorial3_pipeline/src/: lib.rs  shader.wgsl
tutorial4_buffers/src/: lib.rs
tutorial5_textures/: Cargo.toml
tutorial5_textures/src/: lib.rs
tutorial6_uniform_buffers_and_3d/src/: camera.rs  lib.rs  shader.wgsl
tutorial7_instancing/src/: camera.rs  lib.rs  shader.wgsl
tutorial8_depth_buffer/src/: lib.rs
tutorial9_model_loading/: Cargo.toml  default.nix
tutorial9_model_loading/src/: lib.rs  model.rs  texture.rs
